package entity;

/**
 * Created by ZhijunHong on 2017/11/24.
 */

public class Macbook extends Computer {
    protected Macbook() {

    }
    @Override
    public void setOS() {
        mOS = "Mac OS X 10.10";
    }
}
